Extend REST API
